--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="C:\Users\BrentDT\Desktop\Web Develpment\HTML - Personal Website\images\katlin web pic.jpg" width="150" height="180" katlin profile picture"></td>
+      <td><img src="https://www.facebook.com/photo.php?fbid=10205347321920303&set=t.1766131944&type=3&size=1511%2C2015" width="150" height="180" katlin profile picture"></td>
       <td><h1>Katlin McFerrin </h1>
       <p><i><strong>Nurse gone Web developer for </strong><a href="https://mcferrinco.com/">McFerrin Co</a></i></p>
        <p>As a previous maternal newborn nurse for six years, i have come to a point in my career that I knew I wanted to do something more fulfilling. I was not sure what exactly until I was introduced to Web Development. Web Development allows me to use critical
