--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </tr>
 </table>
 <hr>
-  <a href="hobbies.html">My Hobbies</a>
+  <a href="Hobbies.html">My Hobbies</a>
   <br>
   <a href="contact.html">Contact</a>
 </body>
